// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Dialog /> renders correctly with no properties 1`] = `
<body
  class="bp4-overlay-open"
>
  <div />
  <div
    class="bp4-portal dialog-portal-container"
  >
    <div
      aria-live="polite"
      class="bp4-overlay bp4-overlay-open bp4-overlay-scroll-container"
    >
      <div
        class="bp4-overlay-start-focus-trap bp4-overlay-appear bp4-overlay-appear-active"
        tabindex="0"
      />
      <div
        class="bp4-overlay-backdrop bp4-overlay-appear bp4-overlay-appear-active"
      />
      <div
        class="bp4-dialog-container bp4-overlay-content bp4-overlay-appear bp4-overlay-appear-active"
      >
        <div
          aria-labelledby="title-bp-dialog-0"
          class="bp4-dialog Dialog"
          role="dialog"
        >
          <div
            class="bp4-dialog-header"
          >
            <span
              aria-hidden="true"
              class="bp4-icon bp4-icon-info-sign"
              icon="info-sign"
              tabindex="-1"
            >
              <svg
                data-icon="info-sign"
                height="16"
                role="img"
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  d="M8 0C3.58 0 0 3.58 0 8s3.58 8 8 8 8-3.58 8-8-3.58-8-8-8zM7 3h2v2H7V3zm3 10H6v-1h1V7H6V6h3v6h1v1z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            <h6
              class="bp4-heading"
              id="title-bp-dialog-0"
            >
              Lorem Ipsum
            </h6>
            <button
              aria-label="Close"
              class="bp4-button bp4-minimal bp4-dialog-close-button"
              type="button"
            >
              <span
                aria-hidden="true"
                class="bp4-icon bp4-icon-cross"
                icon="cross"
              >
                <svg
                  data-icon="cross"
                  height="16"
                  role="img"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    d="M9.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L8 6.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42L6.59 8 3.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71L8 9.41l3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L9.41 8z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </div>
          <div
            class="Dialog__content"
          >
            Hello World
          </div>
        </div>
      </div>
      <div
        class="bp4-overlay-end-focus-trap bp4-overlay-appear bp4-overlay-appear-active"
        tabindex="0"
      />
    </div>
  </div>
</body>
`;

exports[`<Dialog /> renders custom classes 1`] = `
<body
  class="bp4-overlay-open"
>
  <div />
  <div
    class="bp4-portal dialog-portal-container"
  >
    <div
      aria-live="polite"
      class="bp4-overlay bp4-overlay-open bp4-overlay-scroll-container"
    >
      <div
        class="bp4-overlay-start-focus-trap bp4-overlay-appear bp4-overlay-appear-active"
        tabindex="0"
      />
      <div
        class="bp4-overlay-backdrop bp4-overlay-appear bp4-overlay-appear-active"
      />
      <div
        class="bp4-dialog-container bp4-overlay-content bp4-overlay-appear bp4-overlay-appear-active"
      >
        <div
          aria-labelledby="title-bp-dialog-1"
          class="bp4-dialog Dialog my-dialog"
          role="dialog"
        >
          <div
            class="bp4-dialog-header"
          >
            <span
              aria-hidden="true"
              class="bp4-icon bp4-icon-info-sign"
              icon="info-sign"
              tabindex="-1"
            >
              <svg
                data-icon="info-sign"
                height="16"
                role="img"
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  d="M8 0C3.58 0 0 3.58 0 8s3.58 8 8 8 8-3.58 8-8-3.58-8-8-8zM7 3h2v2H7V3zm3 10H6v-1h1V7H6V6h3v6h1v1z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            <h6
              class="bp4-heading"
              id="title-bp-dialog-1"
            >
              Lorem Ipsum
            </h6>
            <button
              aria-label="Close"
              class="bp4-button bp4-minimal bp4-dialog-close-button"
              type="button"
            >
              <span
                aria-hidden="true"
                class="bp4-icon bp4-icon-cross"
                icon="cross"
              >
                <svg
                  data-icon="cross"
                  height="16"
                  role="img"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    d="M9.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L8 6.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42L6.59 8 3.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71L8 9.41l3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L9.41 8z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </div>
          <div
            class="Dialog__content"
          >
            Hello World
          </div>
        </div>
      </div>
      <div
        class="bp4-overlay-end-focus-trap bp4-overlay-appear bp4-overlay-appear-active"
        tabindex="0"
      />
    </div>
  </div>
</body>
`;
